Release 0.2.6 - Remove splash screen and fix bugs